# logitech-led-sdk-rs

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: Rust.yml  RustDoc.yml  rust.yml
logitech-led-sdk-sys/: Cargo.toml  LICENSE-MIT  README.md  build.rs  generate-bindings.py  wrapper.h
logitech-led-sdk-sys/src/: bindings-i686.rs  bindings-x86_64.rs  lib.rs
logitech_led_sdk/: all.html  enum.DeviceType.html  enum.KeyName.html  index.html  sidebar-items.js  static.SDK_LOCK.html  struct.ColorPercent.html  struct.Sdk.html  struct.TargetDevice.html
logitech_led_sdk/color_percent/: struct.ColorPercent.html
logitech_led_sdk/sdk/: struct.Sdk.html
logitech_led_sdk/target_device/: struct.TargetDevice.html
logitech_led_sdk_sys/: all.html  constant.LOGI_DEVICETYPE_ALL.html  constant.LOGI_DEVICETYPE_MONOCHROME.html  constant.LOGI_DEVICETYPE_MONOCHROME_ORD.html  constant.LOGI_DEVICETYPE_PERKEY_RGB.html  constant.LOGI_DEVICETYPE_PERKEY_RGB_ORD.html  constant.LOGI_DEVICETYPE_RGB.html  constant.LOGI_DEVICETYPE_RGB_ORD.html  constant.LOGI_LED_BITMAP_BYTES_PER_KEY.html  constant.LOGI_LED_BITMAP_HEIGHT.html  constant.LOGI_LED_BITMAP_SIZE.html  constant.LOGI_LED_BITMAP_WIDTH.html  constant.LOGI_LED_DURATION_INFINITE.html  enum.LogiLed_DeviceType.html  enum.LogiLed_KeyName.html  fn.LogiLedExcludeKeysFromBitmap.html  fn.LogiLedFlashLighting.html  fn.LogiLedFlashSingleKey.html  fn.LogiLedGetConfigOptionBool.html  fn.LogiLedGetConfigOptionColor.html  fn.LogiLedGetConfigOptionKeyInput.html  fn.LogiLedGetConfigOptionNumber.html  fn.LogiLedGetConfigOptionRange.html  fn.LogiLedGetConfigOptionRect.html  fn.LogiLedGetConfigOptionSelect.html  fn.LogiLedGetConfigOptionString.html  fn.LogiLedGetSdkVersion.html  fn.LogiLedInit.html  fn.LogiLedInitWithName.html  fn.LogiLedPulseLighting.html  fn.LogiLedPulseSingleKey.html  fn.LogiLedRestoreLighting.html  fn.LogiLedRestoreLightingForKey.html  fn.LogiLedSaveCurrentLighting.html  fn.LogiLedSaveLightingForKey.html  fn.LogiLedSetConfigOptionLabel.html  fn.LogiLedSetLighting.html  fn.LogiLedSetLightingForKeyWithHidCode.html  fn.LogiLedSetLightingForKeyWithKeyName.html  fn.LogiLedSetLightingForKeyWithQuartzCode.html  (+9 more)
src/: color_percent.rs  lib.rs  sdk.rs  target_device.rs
src/logitech_led_sdk/: color_percent.rs.html  lib.rs.html  sdk.rs.html  target_device.rs.html
src/logitech_led_sdk_sys/: bindings-x86_64.rs.html  lib.rs.html
trait.impl/bitflags/traits/: trait.Flags.js  trait.PublicFlags.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/fmt/: trait.Binary.js  trait.Debug.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
(+23 files in other folders)
