[package]
name = "logitech-led-sdk"
version = "0.0.0"
authors = [ "Nathaniel Daniel <nathaniel.daniel12@gmail.com>" ]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
logitech-led-sdk-sys = { path = "logitech-led-sdk-sys" }
once_cell = "1.18.0"

[dev-dependencies]
serial_test = "1.0.0"

[workspace]
members = [
	"logitech-led-sdk-sys"
]
