[package]
name = "logitech-led-sdk-sys"
version = "0.1.1"
authors = [ "Nathaniel Daniel <nathaniel.daniel12@gmail.com>" ]
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"
description = "A low level Rust binding for the Logitech LED SDK"
exclude = [
    "*.py",
    "wrapper.h",
]

[dependencies]

[features]
default = []
rustdoc = []

[package.metadata.docs.rs]
features = [ "rustdoc" ]